# smart_video_analysis

./: CMakeLists.txt  LICENSE  README.md  build.sh
config/: config.yaml
include/: SmartVideoAnalysisSystem.hpp
include/core/: Config.hpp  ErrorHandling.hpp  Logger.hpp
include/modules/inference/: IInferenceEngine.hpp  InferenceEngine.hpp  RKNNInferenceEngine.hpp
include/modules/model_processor/: ModelProcessor.hpp
include/modules/operator_adapter/: OperatorAdapter.hpp
include/modules/postprocessing/: DetectionPostprocessor.hpp
include/modules/preprocessing/: ImagePreprocessor.hpp
include/modules/video_input/: VideoInput.hpp
include/modules/visualization/: Visualizer.hpp
src/: SmartVideoAnalysisSystem.cpp  main.cpp
src/core/: Config.cpp  ErrorHandling.cpp  Logger.cpp
src/modules/inference/: InferenceEngine.cpp  RKNNInferenceEngine.cpp
src/modules/model_processor/: ModelProcessor.cpp
src/modules/operator_adapter/: OperatorAdapter.cpp
src/modules/postprocessing/: DetectionPostprocessor.cpp
src/modules/preprocessing/: ImagePreprocessor.cpp
src/modules/video_input/: VideoInput.cpp
src/modules/visualization/: Visualizer.cpp
tools/: export_onnx.py  requirements.txt
